@startuml
' --- Configurazione Stile ---
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle


    class IssueController {
        + createIssue(request: IssueDTO): ResponseEntity
    }

    class IssueService {
        + exportIssues(format: String): String
    }

    interface IssueExportStrategy <<interface>> {
        + export(issues: List<Issue>): String
    }

    class CSVExportStrategy implements IssueExportStrategy {
        + export(issues: List<Issue>): String
    }

    class JSONExportStrategy implements IssueExportStrategy {
        + export(issues: List<Issue>): String
    }

    class Issue {
        - id: Integer
        - title: String
        - description: String
        - status: StatusEnum
        - priority: PriorityEnum
        - type: TypeEnum
        - createdAt: Timestamp
        - updatedAt: Timestamp
        - assignedTo: User
        - attachments: List<Attachment>
        - tags: List<Tag>
    }

    interface IssueRepository <<interface>>
    interface TagRepository <<interface>>


    IssueController --> IssueService : - issueService
    IssueService --> IssueRepository : - issueRepository
    IssueService --> TagRepository : - tagRepository
    IssueRepository --> Issue : gestisce
    IssueService o-- IssueExportStrategy : - strategy
@enduml